--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,9 @@ dependencies:
   concentric_transition: ^1.0.3
   lottie: ^3.1.2
   liquid_swipe: ^3.1.0
+  image_picker: ^1.1.2
   tflite_flutter: ^0.11.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
